--- a/StringInBetween.csproj
+++ b/StringInBetween.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>StringInBetween</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>CoderRM</Authors>
+    <Copyright>Copyright (c) CoderRM 2023<Copyright/>
+    <Description>A simple library for getting strings in between strings and do something with them.</Description>
+    <PackageTags>string,parse,strings in between strings<PackageTags/>
   </PropertyGroup>
 
 </Project>
